# authress-sdk.rs

./: Cargo.toml  README.md  contributing.md
.github/workflows/: build.yml
.openapi-generator/: FILES
docs/: AccessRecord.md  AccessRecordAccount.md  AccessRecordCollection.md  AccessRecordsApi.md  AccessRequest.md  AccessRequestCollection.md  AccessRequestResponse.md  AccessTemplate.md  Account.md  AccountCollection.md  AccountLinks.md  AccountsApi.md  ApplicationDelegation.md  ApplicationsApi.md  ClaimRequest.md  Client.md  ClientAccessKey.md  ClientCollection.md  ClientOptions.md  CollectionLinks.md  Connection.md  ConnectionCollection.md  ConnectionData.md  ConnectionDefaultConnectionProperties.md  ConnectionsApi.md  Extension.md  ExtensionApplication.md  ExtensionClient.md  ExtensionCollection.md  ExtensionsApi.md  Group.md  GroupCollection.md  GroupsApi.md  Identity.md  IdentityCollection.md  IdentityRequest.md  Invite.md  Link.md  LinkedGroup.md  Links.md  (+40 more)
docs/examples/: README.md
src/: authress_settings.rs  lib.rs
src/apis/: access_records_api.rs  accounts_api.rs  applications_api.rs  configuration.rs  connections_api.rs  extensions_api.rs  groups_api.rs  mod.rs  resource_permissions_api.rs  roles_api.rs  service_clients_api.rs  tenants_api.rs  user_permissions_api.rs  users_api.rs
src/models/: access_record.rs  access_record_account.rs  access_record_collection.rs  access_request.rs  access_request_collection.rs  access_request_response.rs  access_template.rs  account.rs  account_collection.rs  account_links.rs  application_delegation.rs  claim_request.rs  client.rs  client_access_key.rs  client_collection.rs  client_options.rs  collection_links.rs  connection.rs  connection_collection.rs  connection_data.rs  connection_default_connection_properties.rs  extension.rs  extension_application.rs  extension_client.rs  extension_collection.rs  group.rs  group_collection.rs  identity.rs  (+40 more)
