[package]
name = "authress"
version = "0.0.0"
edition = "2021"
authors = ["Authress Developers <developers@authress.io>"]
rust-version = "1.56"

description = "The Authress SDK for RUST - provides authorization as a service with fully compatible REST apis"
documentation = "https://authress.io/app/#/api"
homepage = "https://authress.io"
repository = "https://github.com/Authress/authress-sdk.rs"
license = "Apache-2.0"
keywords = ["auth", "authentication", "authorization", "authress", "authress-sdk", "api", "api-security", "oauth", "saml", "permissions", "user-security", "polar", "policy", "policy-engine"]
categories = ["authentication", "api-bindings", "config", "database", "development-tools"]

# Cargo.toml reference guide: https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
