[package]
name = "authress"
version = "0.0.0"
edition = "2021"
authors = ["Authress Developers <developers@authress.io>"]
rust-version = "1.56"

description = "The Authress SDK for RUST - provides authorization as a service with fully compatible REST apis. Authentication / Authorization / User Identity Roles / Permissions / Policies"
documentation = "https://authress.io/app/#/api"
homepage = "https://authress.io"
repository = "https://github.com/Authress/authress-sdk.rs"
license = "Apache-2.0"
keywords = ["authentication", "authorization", "roles", "permission-policy", "oauth-openid-saml"]
categories = ["authentication", "api-bindings", "config", "database", "development-tools"]

# Cargo.toml reference guide: https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
reqwest = { version = "^0.11", features = ["json", "multipart"] }
